NEWS for the forestplot package

Changes for 1.0.2
-----------------
* Added ability to position the graph

Changes for 1.0.1
-----------------
* Added ability to generate horizontal lines
* Minor documentation changes

Changes for 1.0
---------------
* Separation from the Gmisc-package
* Name change - forestplot2 is now just forestplot in order to allow a deprecated call
  within the Gmisc package without generating a conflict
* The fontfamily arguments are now embedded in the txt_gp that takes input from the
  fpTxtGp function. The fonts for the labels/summaries can be specified down to the
  cell level.
* If provided a vector of length two for the zero argumente you get an area for the zero-effect
* There is a maximum colgap length for the box corresponding to the box height
* confintNormalFn, confintSummaryFn, legendMarkerFn are now called fn.ci_norm, fn.ci_sum, fn.legend
* Argument main in forestplot has changed to title