@@ -1,6 +1,6 @@
 Package: forestplot
 Version: 1.0.2
-Date: 2015-01-12
+Date: 2015-01-21
 Title: Advanced Forest Plot Using 'grid' Graphics
 Authors@R: c(person(given = "Max",
                     family = "Gordon",
