@@ -3,6 +3,7 @@ NEWS for the forestplot package
 Changes for 1.0.2
 -----------------
 * Added ability to position the graph
+* Multiple lines can now have NA values
 
 Changes for 1.0.1
 -----------------
